fix dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,11 +24,11 @@ body {
 }
 
 .btn-primary {
-    @apply px-4 py-2 min-w-32 flex items-center justify-center gap-2 bg-red-500 hover:bg-red-400 text-white rounded-lg text-sm cursor-pointer;
+    @apply px-4 py-2 min-w-40 bg-blue-500 dark:bg-blue-600 hover:bg-blue-400 dark:hover:bg-blue-500 text-white rounded-lg text-sm cursor-pointer;
 }
 
 .small-button {
-    @apply bg-white dark:bg-slate-700 dark:text-white font-bold p-2 rounded-lg border border-gray-300 dark:border-gray-500 hover:border-gray-400 disabled:bg-slate-300 dark:disabled:bg-slate-700 disabled:text-slate-500 disabled:cursor-not-allowed;
+    @apply bg-white dark:bg-slate-700 dark:text-white font-bold p-3 rounded-lg border border-gray-300 dark:border-gray-500 hover:border-gray-400 disabled:bg-slate-300 dark:disabled:bg-slate-700 disabled:text-slate-500 disabled:cursor-not-allowed;
 }
 
 /* card */
@@ -70,11 +70,11 @@ body {
 }
 
 .form-control {
-    @apply block border border-slate-300 dark:border-slate-500 px-4 py-2 sm:py-2.5 bg-white dark:bg-slate-800 rounded-lg outline-none focus:ring-2 focus:ring-blue-500/30 disabled:text-slate-500 disabled:bg-gray-300 disabled:cursor-not-allowed;
+    @apply block border border-slate-200 dark:border-slate-500 w-full px-4 py-2 sm:py-2.5 bg-slate-200 dark:bg-slate-500 rounded-lg outline-none focus:ring-2 focus:ring-blue-500/30 disabled:text-slate-500 disabled:bg-gray-300 disabled:cursor-not-allowed;
 }
 
 .form-select {
-    @apply block border border-slate-300 dark:border-slate-500 px-4 py-2 sm:py-2.5 bg-white dark:bg-slate-800 rounded-lg outline-none focus:ring-2 focus:ring-blue-500/30 disabled:text-slate-500 disabled:bg-gray-300 disabled:cursor-not-allowed;
+    @apply block border border-slate-200 dark:border-slate-500 w-full px-4 py-2 sm:py-2.5 bg-slate-200 dark:bg-slate-500 rounded-lg outline-none focus:ring-2 focus:ring-blue-500/30 disabled:text-slate-500 disabled:bg-gray-300 disabled:cursor-not-allowed;
 }
 
 @media print {
